added location saving with firebase

--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,13 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
+
+    <!-- angularfire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
+
+
     <!-- google maps api -->
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 
